--- a/public/access/index.html
+++ b/public/access/index.html
@@ -26,17 +26,17 @@
     <link href="../access/index.xml" rel="alternate" type="application/rss+xml" title="设备接入 :: HaBox 技术支持站">
     <link href="../access/index.print.html" rel="alternate" type="text/html" title="设备接入 :: HaBox 技术支持站"><link rel="icon" href="../images/favicon.png" type="image/png">
 
-    <link href="../css/fontawesome-all.min.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../css/nucleus.css?1725709413" rel="stylesheet">
-    <link href="../css/auto-complete.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../css/perfect-scrollbar.min.css?1725709413" rel="stylesheet">
-    <link href="../css/fonts.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../css/theme.css?1725709413" rel="stylesheet">
-    <link href="../css/theme-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-style">
-    <link href="../css/chroma-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../css/variant.css?1725709413" rel="stylesheet">
-    <link href="../css/print.css?1725709413" rel="stylesheet" media="print">
-    <script src="../js/variant.js?1725709413"></script>
+    <link href="../css/fontawesome-all.min.css?1725845641" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fontawesome-all.min.css?1725845641" rel="stylesheet"></noscript>
+    <link href="../css/nucleus.css?1725845641" rel="stylesheet">
+    <link href="../css/auto-complete.css?1725845641" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/auto-complete.css?1725845641" rel="stylesheet"></noscript>
+    <link href="../css/perfect-scrollbar.min.css?1725845641" rel="stylesheet">
+    <link href="../css/fonts.css?1725845641" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../css/fonts.css?1725845641" rel="stylesheet"></noscript>
+    <link href="../css/theme.css?1725845641" rel="stylesheet">
+    <link href="../css/theme-relearn-auto.css?1725845641" rel="stylesheet" id="R-variant-style">
+    <link href="../css/chroma-relearn-auto.css?1725845641" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../css/variant.css?1725845641" rel="stylesheet">
+    <link href="../css/print.css?1725845641" rel="stylesheet" media="print">
+    <script src="../js/variant.js?1725845641"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..';
@@ -82,7 +82,7 @@
             </div>
             <div class="topbar-button topbar-button-print" data-content-empty="disable" data-width-s="area-more" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../access/index.print.html" title="打印整章 (CTRL&#43;ALT&#43;p)"><i class="fa-fw fas fa-print"></i></a>
             </div>
-            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../installation/hacs/index.html" title="HACS安装激活 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
+            <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../box/index.html" title="关于HA盒子 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show"><a class="topbar-control" href="../access/homekit/index.html" title="HA Box桥接米家设备到HomeKit (🡒)"><i class="fa-fw fas fa-chevron-right"></i></a>
             </div>
@@ -204,13 +204,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../js/auto-complete.js?1725709413" defer></script>
-        <script src="../js/lunr/lunr.min.js?1725709413" defer></script>
-        <script src="../js/lunr/lunr.stemmer.support.min.js?1725709413" defer></script>
-        <script src="../js/lunr/lunr.multi.min.js?1725709413" defer></script>
-        <script src="../js/lunr/lunr.en.min.js?1725709413" defer></script>
-        <script src="../js/lunr/lunr.zh.min.js?1725709413" defer></script>
-        <script src="../js/search.js?1725709413" defer></script>
+        <script src="../js/auto-complete.js?1725845641" defer></script>
+        <script src="../js/lunr/lunr.min.js?1725845641" defer></script>
+        <script src="../js/lunr/lunr.stemmer.support.min.js?1725845641" defer></script>
+        <script src="../js/lunr/lunr.multi.min.js?1725845641" defer></script>
+        <script src="../js/lunr/lunr.en.min.js?1725845641" defer></script>
+        <script src="../js/lunr/lunr.zh.min.js?1725845641" defer></script>
+        <script src="../js/search.js?1725845641" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -222,6 +222,7 @@
           <li data-nav-id="/installation/instructions/index.html" class=""><a class="padding" href="../installation/instructions/index.html"> HA盒子使用说明书（开箱即用）<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/wifi/index.html" class=""><a class="padding" href="../installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/box/index.html" class=""><a class="padding" href="../box/index.html">关于HA盒子<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/index.html" class="active parent "><input type="checkbox" id="R-section-73540edfdcd333aefa95874c40791ad9" aria-controls="R-subsections-73540edfdcd333aefa95874c40791ad9" checked><label for="R-section-73540edfdcd333aefa95874c40791ad9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单设备接入</span></label><a class="padding" href="../access/index.html">设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-73540edfdcd333aefa95874c40791ad9" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
@@ -301,9 +302,9 @@
       </div>
     </aside>
 
-    <script src="../js/clipboard.min.js?1725709413" defer></script>
-    <script src="../js/perfect-scrollbar.min.js?1725709413" defer></script>
-    <script src="../js/theme.js?1725709413" defer></script>
+    <script src="../js/clipboard.min.js?1725845641" defer></script>
+    <script src="../js/perfect-scrollbar.min.js?1725845641" defer></script>
+    <script src="../js/theme.js?1725845641" defer></script>
 
 
   </body>
