--- a/public/installation/instructions/index.print.html
+++ b/public/installation/instructions/index.print.html
@@ -31,18 +31,18 @@
     <link href="http://localhost:1313/installation/instructions/index.html" rel="canonical" type="text/html" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站">
     <link href="../../installation/instructions/index.xml" rel="alternate" type="application/rss+xml" title=" HA盒子使用说明书（开箱即用） :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725709413" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725709413" rel="stylesheet">
-    <link href="../../css/fonts.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725709413" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725709413" rel="stylesheet">
-    <link href="../../css/print.css?1725709413" rel="stylesheet" media="print">
-    <link href="../../css/format-print.css?1725709413" rel="stylesheet">
-    <script src="../../js/variant.js?1725709413"></script>
+    <link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725802923" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725802923" rel="stylesheet">
+    <link href="../../css/fonts.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725802923" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725802923" rel="stylesheet">
+    <link href="../../css/print.css?1725802923" rel="stylesheet" media="print">
+    <link href="../../css/format-print.css?1725802923" rel="stylesheet">
+    <script src="../../js/variant.js?1725802923"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -106,38 +106,38 @@
 <p>首先，感谢您选择由“HABox智能家居盒子”提供的Home assistant智能家居盒子，下面请与我一起进入这个神秘的小盒子一探究竟。</p>
 <h2 id="等待欢迎界面">等待欢迎界面</h2>
 <p>拿到盒子后，连上网线，插上电源，开机……启动并加载完成，大概要等待2分半种。然后在浏览器地址栏输入<a href="http://homeassistant.local:8123/" rel="external" target="_self">http://homeassistant.local:8123</a> 进行访问，不出所料，您将看到如下欢迎界面。（你也可以在路由器后台查看具体ip地址，然后输入<a href="http://ip:8123/" rel="external" target="_self">http://ip:8123</a>进行访问）</p>
-<p><a href="#R-image-76fa09b11e471e3254f6596d6f3a53fb" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-76fa09b11e471e3254f6596d6f3a53fb"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
+<p><a href="#R-image-d5d49f310e0399fb03a243969bccf218" class="lightbox-link"><img alt="202406190942917" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d5d49f310e0399fb03a243969bccf218"><img alt="202406190942917" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406190942917.png"></a></p>
 <h2 id="基本设置">基本设置</h2>
 <h3 id="创建用户">创建用户</h3>
-<p><a href="#R-image-c32f7d8b9bee9a386f93dd37592a1f7d" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c32f7d8b9bee9a386f93dd37592a1f7d"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
+<p><a href="#R-image-d7615dbf995a2d9c56a5055ec2b00780" class="lightbox-link"><img alt="202406211526015" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-d7615dbf995a2d9c56a5055ec2b00780"><img alt="202406211526015" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211526015.png"></a></p>
 <h3 id="选择家的位置">选择家的位置</h3>
 <p>这个地方如果搜索不到，您可以通过缩放地图，拖动地图中的位置图标到家所在的位置，然后是设置国家选项（如果是通过搜索找到的位置，就没有这个选项，系统自动设置了）</p>
-<p><a href="#R-image-b3e3d8836fa637a288b18d9234073c91" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-b3e3d8836fa637a288b18d9234073c91"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
-<p><a href="#R-image-8fc2f02e2fc8546810878384b39d9bf7" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-8fc2f02e2fc8546810878384b39d9bf7"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
+<p><a href="#R-image-f2f75e11541839bbcfe814cf5adffb5b" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f2f75e11541839bbcfe814cf5adffb5b"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/e44a5581acae451ff0707c4d898449c3e4e7b897.png"></a></p>
+<p><a href="#R-image-c8db5ea4865cc86a10d210bf1824eddb" class="lightbox-link"><img alt="202406211633570" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-c8db5ea4865cc86a10d210bf1824eddb"><img alt="202406211633570" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211633570.png"></a></p>
 <h3 id="信息收集">信息收集</h3>
 <p>接下来是收集数据，建议不选，然后是自动发现家里的智能设备，直接点完成即可。</p>
-<p><a href="#R-image-82907fd08a28dc3be30db9acf527cfae" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-82907fd08a28dc3be30db9acf527cfae"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
-<p><a href="#R-image-0ce8f00300ae02df9427f4f6ad9a9901" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-0ce8f00300ae02df9427f4f6ad9a9901"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
+<p><a href="#R-image-18898711c1bc532ac5b809dcd14bc2ce" class="lightbox-link"><img alt="202406211635332" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-18898711c1bc532ac5b809dcd14bc2ce"><img alt="202406211635332" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635332.png"></a></p>
+<p><a href="#R-image-b3d9cb35c8bc53feb1f13b17b3e8423d" class="lightbox-link"><img alt="202406211635546" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b3d9cb35c8bc53feb1f13b17b3e8423d"><img alt="202406211635546" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211635546.png"></a></p>
 <h3 id="正式进入后台">正式进入后台</h3>
-<p><a href="#R-image-9168798f97c6b07652a25a58ee916af7" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9168798f97c6b07652a25a58ee916af7"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
+<p><a href="#R-image-6e78472df07e5a4e190afd6d8d482fc8" class="lightbox-link"><img alt="202406211637388" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6e78472df07e5a4e190afd6d8d482fc8"><img alt="202406211637388" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/202406211637388.png"></a></p>
 <h3 id="升级和修复">升级和修复</h3>
 <p>您可能会发现左侧配置选项边上有如上图所示的数字提示，点进去</p>
 <p>该升级升级，该修复修复</p>
-<p><a href="#R-image-d5028ff2d88b93b52ab5f7cf9ea25adc" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d5028ff2d88b93b52ab5f7cf9ea25adc"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
-<p><a href="#R-image-82b0b86e63eec348d0274f02ae70089b" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-82b0b86e63eec348d0274f02ae70089b"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
-<p><a href="#R-image-21e5849d2f702392ba231880a40f179a" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-21e5849d2f702392ba231880a40f179a"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
-<p><a href="#R-image-38ea9f034268baf9459bffeae131a90b" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-38ea9f034268baf9459bffeae131a90b"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
+<p><a href="#R-image-cf48bf012d45a9d323acb8e7f38f97c7" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-cf48bf012d45a9d323acb8e7f38f97c7"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c664e0a2fa27ba6fc97a773560ed5975a97b49.png"></a></p>
+<p><a href="#R-image-e972fe16792b0d3ee2a5af0ba6d87aed" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e972fe16792b0d3ee2a5af0ba6d87aed"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/0310e4b87dacb4a2aecd2cb2b5d1247dbe2acf54.png"></a></p>
+<p><a href="#R-image-61df2d29676ab8ce2f4245474431b185" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-61df2d29676ab8ce2f4245474431b185"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f152df71ed02d594e08f2d4b0bc31e6186aa8d08.png"></a></p>
+<p><a href="#R-image-e6a5bb119f579918334872abcb4ba1dc" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e6a5bb119f579918334872abcb4ba1dc"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eb2058a97322851ba59fcfe3be5cd3aaa18b84f3.png"></a></p>
 <h3 id="结束语">结束语</h3>
 <p>到此，您基本上就可以根据自身情况进行设备的接入和控制了，请持续关注我们，我们将持续发布使用HomeAssistant盒子相关的使用说明！</p>
 
@@ -172,10 +172,11 @@
         </div>
       </main>
     </div>
-    <script src="../../js/clipboard.min.js?1725709413" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725709413" defer></script>
-    <script src="../../js/theme.js?1725709413" defer></script>
-
+    <script src="../../js/clipboard.min.js?1725802923" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725802923" defer></script>
+    <script src="../../js/theme.js?1725802923" defer></script>
+<script type="text/javascript" src="../../js/carousel.js"></script>
+<link rel="stylesheet" href="../../css/carousel.css">
 
   </body>
 </html>
