--- a/public/network/docker-pull/index.html
+++ b/public/network/docker-pull/index.html
@@ -27,17 +27,17 @@
     <link href="../../network/docker-pull/index.xml" rel="alternate" type="application/rss+xml" title="从 Docker Hub 快速拉取镜像 :: HaBox 技术支持站">
     <link href="../../network/docker-pull/index.print.html" rel="alternate" type="text/html" title="从 Docker Hub 快速拉取镜像 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725709413" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725709413" rel="stylesheet">
-    <link href="../../css/fonts.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725709413" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725709413" rel="stylesheet">
-    <link href="../../css/print.css?1725709413" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725709413"></script>
+    <link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725802923" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725802923" rel="stylesheet">
+    <link href="../../css/fonts.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725802923" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725802923" rel="stylesheet">
+    <link href="../../css/print.css?1725802923" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725802923"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -195,13 +195,13 @@
 </span></span><span style="display:flex;"><span>registry:2</span></span></code></pre></div><h3 id="搭建-nexus">搭建 Nexus</h3>
 <p>可选择使用 Docker 命令搭建 <a href="https://link.segmentfault.com/?enc=tbYJWzjSyDQsTkkURfooAQ%3D%3D.QIipXcRsUxqp02x09FrfLCPrKyA3C9SNrkeQCydZtdnSd8CC0luc36yEaTIfkJ8C" rel="external" target="_self">Nexus</a>。</p>
 <div class="highlight wrap-code"><pre tabindex="0" style="color:#f8f8f2;background-color:#272822;-moz-tab-size:4;-o-tab-size:4;tab-size:4;"><code class="language-apache" data-lang="apache"><span style="display:flex;"><span>docker run -d -p <span style="color:#ae81ff">8081</span>:8081 --name nexus sonatype/nexus3</span></span></code></pre></div><p>或者使用 <a href="https://link.segmentfault.com/?enc=FZchBOKi1qtQY8v1bnXJjw%3D%3D.pGJQ82Ux9WQpeuAt8uqme7hqNpSrSEhuAqUV%2FqA%2F0XIg0LX7UAYua15dLu6eud4ZpuMQpwD5YOON%2FtiFc1AQ2A%3D%3D" rel="external" target="_self">Rainbond</a> 应用商店一键安装。</p>
-<p><a href="#R-image-c70b01ca9113ec5e6802772694222066" class="lightbox-link"><img alt="preview" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/view" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-c70b01ca9113ec5e6802772694222066"><img alt="preview" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/view"></a></p>
+<p><a href="#R-image-7a155ab99678736db9bacdb2d744b21e" class="lightbox-link"><img alt="preview" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/view" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-7a155ab99678736db9bacdb2d744b21e"><img alt="preview" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/view"></a></p>
 <p>搭建完成后正常登录 Nexus 页面，根据页面引导配置 Docker 相关的存储 Repository 及代理 Repository 即可。</p>
 <h3 id="搭建-harbor">搭建 Harbor</h3>
 <p>可参考 <a href="https://link.segmentfault.com/?enc=gArRPFlTwahPHAZVYax5eQ%3D%3D.nEIXf3i42IPUpjQpS0rCTWWuYuZuTijmAc5tYh0b0JQ6Rpq%2FgSXPBgpsoxHhenn2" rel="external" target="_self">Harbor文档 </a>搭建或者使用 <a href="https://link.segmentfault.com/?enc=Y8%2FkX9dQK4wkXs1osqCq2Q%3D%3D.Y4NBA%2Fwcm2hd3jymDG3IHKxzC%2BwC7C2hOmQohmPoWdDa6NnnhnrlgpZirSzWOz3yAO6WgEWO0ylpmxJECRtUIw%3D%3D" rel="external" target="_self">Rainbond</a> 应用商店一键安装。</p>
-<p><a href="#R-image-12fe11ba7d9114c893dd3afea69f19c1" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/1460000044981234" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-12fe11ba7d9114c893dd3afea69f19c1"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/1460000044981234"></a></p>
+<p><a href="#R-image-6591e8d84f5f6384d6a6bdf9a09b4155" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/1460000044981234" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6591e8d84f5f6384d6a6bdf9a09b4155"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/1460000044981234"></a></p>
 <h2 id="可用的镜像代理">可用的镜像代理</h2>
 <p>最近十来天我尝试了很多镜像加速站，整理了以下镜像站目前是可用状态，但可能随时会遇到不可用、关停、访问比较慢的状态，建议同时配置多个镜像源。</p>
 <table>
@@ -247,8 +247,8 @@
 </table>
 <h2 id="福利">福利</h2>
 <p>近期 Rainbond 社区也接受到许多用户反馈 Docker 镜像拉不下来，不能构建、打包了，因此 Rainbond 也搭建了个镜像加速服务，采用 <code>CloudFlare + 国外服务器 Nginx 反代</code>的方案为 Rainbond 社区的用户们提供镜像加速服务。</p>
-<p><a href="#R-image-3070851306168c81efb380b32687ad58" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2261433068-091e79c93c8fa759" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3070851306168c81efb380b32687ad58"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2261433068-091e79c93c8fa759"></a></p>
+<p><a href="#R-image-07d5f1bb4c4b7a787cb372d3713ff565" class="lightbox-link"><img alt="img" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2261433068-091e79c93c8fa759" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-07d5f1bb4c4b7a787cb372d3713ff565"><img alt="img" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2261433068-091e79c93c8fa759"></a></p>
 <p>目前速度挺快的（未来不好说</p>
 <h3 id="使用方法">使用方法</h3>
 <p>1.直接获取 Docker Hub 镜像</p>
@@ -355,13 +355,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725709413" defer></script>
-        <script src="../../js/search.js?1725709413" defer></script>
+        <script src="../../js/auto-complete.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725802923" defer></script>
+        <script src="../../js/search.js?1725802923" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -373,6 +373,7 @@
           <li data-nav-id="/installation/instructions/index.html" class=""><a class="padding" href="../../installation/instructions/index.html"> HA盒子使用说明书（开箱即用）<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/wifi/index.html" class=""><a class="padding" href="../../installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/box/index.html" class=""><a class="padding" href="../../box/index.html">关于盒子<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-73540edfdcd333aefa95874c40791ad9" aria-controls="R-subsections-73540edfdcd333aefa95874c40791ad9"><label for="R-section-73540edfdcd333aefa95874c40791ad9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单设备接入</span></label><a class="padding" href="../../access/index.html">设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-73540edfdcd333aefa95874c40791ad9" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
@@ -452,10 +453,11 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725709413" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725709413" defer></script>
-    <script src="../../js/theme.js?1725709413" defer></script>
-
+    <script src="../../js/clipboard.min.js?1725802923" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725802923" defer></script>
+    <script src="../../js/theme.js?1725802923" defer></script>
+<script type="text/javascript" src="../../js/carousel.js"></script>
+<link rel="stylesheet" href="../../css/carousel.css">
 
   </body>
 </html>
