--- a/public/network/habox-over-greatwall/index.html
+++ b/public/network/habox-over-greatwall/index.html
@@ -35,17 +35,17 @@
     <link href="../../network/habox-over-greatwall/index.xml" rel="alternate" type="application/rss+xml" title="Ha盒子配置科学上网 :: HaBox 技术支持站">
     <link href="../../network/habox-over-greatwall/index.print.html" rel="alternate" type="text/html" title="Ha盒子配置科学上网 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725709413" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725709413" rel="stylesheet">
-    <link href="../../css/fonts.css?1725709413" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725709413" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725709413" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725709413" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725709413" rel="stylesheet">
-    <link href="../../css/print.css?1725709413" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725709413"></script>
+    <link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725802923" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725802923" rel="stylesheet">
+    <link href="../../css/fonts.css?1725802923" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725802923" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725802923" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725802923" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725802923" rel="stylesheet">
+    <link href="../../css/print.css?1725802923" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725802923"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -126,25 +126,25 @@
 <p>前提，你已拥有可以用的梯子（节点），如果没有请参考：</p>
 <p><a href="../../network/free-vless-node/index.html" title="搭建免费科学上网节点">搭建免费科学上网节点</a></p>
 <p>加载项商店搜索&quot;加速&quot;，安装它（实际上就是v2raya,很好用的工具）</p>
-<p><a href="#R-image-aae40a16e92b454ae29f648c9e57dcce" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-aae40a16e92b454ae29f648c9e57dcce"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
+<p><a href="#R-image-b7be60b4ee7389c3eb5052fd9ff7ebd5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b7be60b4ee7389c3eb5052fd9ff7ebd5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/070adbd5eb8a90dc0647ed13a5c1acd21d457be8.png"></a></p>
 <p>安装完后，点启动，配置选项卡可以不用修改默认就行</p>
-<p><a href="#R-image-7da4cda475410d3a9ed6cb3c9612e07c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-7da4cda475410d3a9ed6cb3c9612e07c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
+<p><a href="#R-image-ddf7d88aec4814ff5692d12e9e63ba2b" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ddf7d88aec4814ff5692d12e9e63ba2b"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/df3fc21234594a0b1260007e57f8a549aebe0075.png"></a></p>
 <p>打开WEB UI，初次进入需要设置用户名密码，设置后请记好了。</p>
 <p>导入节点</p>
-<p><a href="#R-image-35c28546579b98644dd73718e7149dcc" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-35c28546579b98644dd73718e7149dcc"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
+<p><a href="#R-image-37d9b835f9dbd9205614393bcdf60ad3" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-37d9b835f9dbd9205614393bcdf60ad3"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/35f8c5d6d06e839c5d250ccfcda52ad6d65360c3.png"></a></p>
 <p>然后，选择，启动</p>
-<p><a href="#R-image-73c8a321c2339f8a1911cc3a9ef8f543" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-73c8a321c2339f8a1911cc3a9ef8f543"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
+<p><a href="#R-image-2b10b1ee765d6cd22bcacf6379c189a7" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-2b10b1ee765d6cd22bcacf6379c189a7"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/6039b77ac1aa021955fcb987013cbb0505db3e30.png"></a></p>
 <p>此时，应该就可以用了。开个窗口测试一下
 <code>http://homeassistant.local:7681/</code>
 进入后输入login 回车
 输入curl <a href="https://www.google.com" rel="external" target="_self">www.google.com</a>回车</p>
 <p>是不是看到google页面返回的网页源码了？</p>
-<p><a href="#R-image-fd005ec824a651a12d2e3a2d403393a5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-fd005ec824a651a12d2e3a2d403393a5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
+<p><a href="#R-image-a6193190eab05637478c8a17782cecdd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a6193190eab05637478c8a17782cecdd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/61122d3118036f0ece49f011ee703944e86ec39a.jpeg"></a></p>
 <p>如果不行，请检查是不是节点或者订阅连接有问题</p>
 <p>关于 v2raya的其他配置，请自行bing。</p>
 <p>其他电脑想要科学上网，也可以修改网络配置，将网关设置为HA盒子的ip地址，也能通过HA盒子实现科学上网的梦想，实现上网自由。</p>
@@ -243,13 +243,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725709413" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725709413" defer></script>
-        <script src="../../js/search.js?1725709413" defer></script>
+        <script src="../../js/auto-complete.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725802923" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725802923" defer></script>
+        <script src="../../js/search.js?1725802923" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -261,6 +261,7 @@
           <li data-nav-id="/installation/instructions/index.html" class=""><a class="padding" href="../../installation/instructions/index.html"> HA盒子使用说明书（开箱即用）<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/wifi/index.html" class=""><a class="padding" href="../../installation/wifi/index.html"> 给HA Box插上无线WIFI的翅膀<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/installation/hacs/index.html" class=""><a class="padding" href="../../installation/hacs/index.html">HACS安装激活<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
+          <li data-nav-id="/box/index.html" class=""><a class="padding" href="../../box/index.html">关于盒子<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/index.html" class=""><input type="checkbox" id="R-section-73540edfdcd333aefa95874c40791ad9" aria-controls="R-subsections-73540edfdcd333aefa95874c40791ad9"><label for="R-section-73540edfdcd333aefa95874c40791ad9"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单设备接入</span></label><a class="padding" href="../../access/index.html">设备接入<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-73540edfdcd333aefa95874c40791ad9" class="morespace collapsible-menu">
           <li data-nav-id="/access/homekit/index.html" class=""><a class="padding" href="../../access/homekit/index.html">HA Box桥接米家设备到HomeKit<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
@@ -340,10 +341,11 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725709413" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725709413" defer></script>
-    <script src="../../js/theme.js?1725709413" defer></script>
-
+    <script src="../../js/clipboard.min.js?1725802923" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725802923" defer></script>
+    <script src="../../js/theme.js?1725802923" defer></script>
+<script type="text/javascript" src="../../js/carousel.js"></script>
+<link rel="stylesheet" href="../../css/carousel.css">
 
   </body>
 </html>
